samples/_failures_safe/1761179869_772a43_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d2ee013.c: In function ‘main’:
./samples/SAFE/__tmp_6d2ee013.c:189:5: error: expected declaration or statement at end of input
  189 |     context_t ctx;
      |     ^~~~~~~~~
